signup,login and navbar final design

--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -1,20 +1,11 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .example-container > * {
-    width: 100%;
-  }
-  
-  form{
-    width: auto;
-    margin: 20px auto 0;
-  } 
+.container{
+  width:auto;
+}
+.loginbox{
+  margin-top: 22vh;
+}
 
-  .mat-form-field{
-    width: 100%;
-  } 
-
-
-
+.field{
+  width: 100%;
+  min-width: 250px;
+} 
