--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,10 +1,3 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
+.field {
     width: 100%;
   }
-  
-  .example-full-width {
-    width: 100%;
-  }
-
