--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,29 +1,29 @@
 <div class="container-fluid">
-    <mat-card class="col-sm-6">
-      <div class="row">
-        <div class="col-sm-6">
-              <form>
-                    <div>
-                      <mat-form-field>
-                        <input matInput placeholder="Email" >
-                      </mat-form-field>
-                    </div>
-                    <div>
-                      <mat-form-field>
-                        <input matInput placeholder="Password">
-                      </mat-form-field>
-                    </div> 
-                    <button mat-raised-button color="primary" type="button">Login</button> 
-                    <mat-label class="pl-3"><a href="#">Forget Password ?</a></mat-label>
-              </form>
+    <div class="container">
+        <div class="col-sm-12 col-md-8 col-lg-6 mx-auto loginbox">
+              <mat-card>
+                <div class="text-center">Logo</div>
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <mat-form-field class="field">
+                                <input matInput type="text" placeholder="Email">
+                            </mat-form-field>
+                        </div>
+                        <div class="form-group">
+                            <mat-form-field class="field">
+                                <input matInput type="text" placeholder="Password">
+                            </mat-form-field>
+                        </div>
+                        <div class="">
+                            <button class="" mat-raised-button color="primary" type="button">Login</button>
+                            <mat-label class="pl-3"><a href="#">Forget Password ?</a></mat-label>  
+                        </div>
+                    </form>
+                </div>
+              </mat-card>
         </div>
-      </div>  
-    </mat-card>
+    </div>    
 </div>
-
-
-
-
-
 
 
