--- a/src/app/mainnav/mainnav.component.html
+++ b/src/app/mainnav/mainnav.component.html
@@ -1,32 +1,16 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Live Feeds</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">User 1</a>
-      <a mat-list-item href="#">User 2</a>
-      <a mat-list-item href="#">User 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>angularMaterial</span>
-      <ul class="">
-        <li>Logout</li>
-      </ul>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <ng-content>
-    </ng-content>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+      <span class="flex"></span>
+          <button id="menu" mat-button [matMenuTriggerFor]="menu" class="options">Logout</button>
+          <mat-menu #menu="matMenu" >
+            <button mat-menu-item class="options">Item 1</button>
+            <button mat-menu-item class="options">Item 2</button>
+          </mat-menu>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+
+
+
+
+
