--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,48 +1,59 @@
 <div class="container-fluid">
-  <div class="col-md-8">
-    <div class="row">
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Full Name" type="text">
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Email id" type="email">
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username" type="text">
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Enter your password" type="password">
-          <!-- <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'false' : 'true'}}</mat-icon> -->
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Confirm password" type="password">
-          <!-- <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'false' : 'true'}}</mat-icon> -->
-        </mat-form-field>
-
-        <mat-form-field>
-          <mat-select [(value)]="selected">
-            <mat-option>Country</mat-option>
-            <mat-option value="option1">Country 1</mat-option>
-            <mat-option value="option2">Country 2</mat-option>
-            <mat-option value="option3">Country 3</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-        <mat-form-field class="example-full-width">
-          <span matPrefix>+91 &nbsp;</span>
-          <input type="tel" matInput placeholder="Phone">
-          <!-- <mat-icon matSuffix>mode_edit</mat-icon> -->
-        </mat-form-field>
-        <div>
-          <mat-checkbox class="example-margin">Admin Priviledges</mat-checkbox>
-        </div>
-        <button mat-raised-button color="primary" >Signup</button>
-      </form>
-    </div>
+    <div class="col-sm-12 col-md-8 col-lg-6 mx-auto">
+        <mat-card>
+          <form>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                    <input matInput placeholder="Full Name" type="text">
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                      <input matInput placeholder="Email id" type="email">
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                      <input matInput placeholder="Username" type="text">
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                      <input matInput placeholder="Enter your password" type="password">
+                      <!-- <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'false' : 'true'}}</mat-icon> -->
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                      <input matInput placeholder="Confirm password" type="password">
+                      <!-- <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'false' : 'true'}}</mat-icon> -->
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field>
+                      <mat-select [(value)]="selected">
+                        <mat-option>Country</mat-option>
+                        <mat-option value="option1">Country 1</mat-option>
+                        <mat-option value="option2">Country 2</mat-option>
+                        <mat-option value="option3">Country 3</mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-form-field class="field">
+                      <span matPrefix>+91 &nbsp;</span>
+                      <input type="tel" matInput placeholder="Phone">
+                      <!-- <mat-icon matSuffix>mode_edit</mat-icon> -->
+                  </mat-form-field>
+              </div>
+              <div class="form-group">
+                  <mat-checkbox class="example-margin">Admin Priviledges</mat-checkbox>
+              </div>
+              <button mat-raised-button color="primary" >Signup</button>
+          </form>
+        </mat-card>
   </div>
 </div>
+
+
+
