--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body{
-    margin: 0
+    /* margin: 0; */
+    /* background-color:#0d0d0d; */
 }
 
 
