- Resolve designing bug

--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <app-mainnav></app-mainnav>
-<div class="row">
+<div class="container-fluid row">
   <app-user-list class="col-sm-3"></app-user-list>
   <div class="cal-container col-sm-9">
     <div class="row text-center">
@@ -98,14 +98,13 @@
     <!-- Everything you see below is just for the demo, you don't need to include it in your app -->
 
     <br /><br /><br />
-    <!-- 
-  <h3>
-    Edit events
-    <button class="btn btn-primary pull-right" (click)="addEvent()">
-      Add new
-    </button>
-    <div class="clearfix"></div>
-  </h3> -->
+    <h3>
+      Edit events
+      <button class="btn btn-primary pull-right" (click)="addEvent()">
+        Add new
+      </button>
+      <div class="clearfix"></div>
+    </h3>
 
     <!-- <div class="table-responsive">
     <table class="table table-bordered">
