--- a/src/app/dashboard/admin-dashboard/user-list/user-list.component.html
+++ b/src/app/dashboard/admin-dashboard/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <div class="title mt-3">Users</div>
 <ng-container *ngIf="users.length > 0">
-  <div class="user-div">
+  <div class="user-div container-fluid">
     <div class="user mt-1 row" *ngFor="let user of users">
       <div class="col-sm-10">{{ user.name }}</div>
 
