--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,5 @@
-<app-mainnav></app-mainnav>
+<!-- <app-mainnav></app-mainnav> -->
+<br> <br> <br> <br>
 <div class="cal-container">
 	<div class="row text-center">
 		<div class="col-md-4">
@@ -68,15 +69,15 @@
 
 <br /><br /><br />
 
-<h3>
+<!-- <h3>
   Edit events
   <button class="btn btn-primary pull-right" (click)="addEvent()">
     Add new
   </button>
   <div class="clearfix"></div>
-</h3>
+</h3> -->
 
-<div class="table-responsive">
+<!-- <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -151,7 +152,7 @@
       </tr>
     </tbody>
   </table>
-</div>
+</div> -->
 
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
