- Remove bug - Add user list bar component - Update design for navigation logout button - Add dropdown in admin dashboard

--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
@@ -7,6 +7,16 @@ pre {
   padding: 15px;
 }
 
-.cal-container{
+.cal-container {
   width: 95%;
+}
+.color {
+  color: black;
+}
+.dropdown {
+  padding: 0.375rem 0.75rem;
+  background: white;
+  border: none;
+  box-shadow: 0 0 1px;
+  border-radius: 2px;
 }
