--- a/src/app/shared/mainnav/mainnav.component.css
+++ b/src/app/shared/mainnav/mainnav.component.css
@@ -1,11 +1,13 @@
-.flex{
+.flex {
   flex: 1 1 auto;
 }
-.options{
-  outline:none;
+.options {
+  outline: none;
 }
-
-
-
-
-
+.logout-button {
+  font-size: 15px;
+  padding: 0 10px;
+  border: none;
+  background: #3f51b4;
+  color: white;
+}
