--- a/src/app/shared/user-list-bar/user-list-bar.component.html
+++ b/src/app/shared/user-list-bar/user-list-bar.component.html
@@ -1,3 +1,32 @@
-<p>
-  user-list-bar works!
-</p>
+<div class="title mt-3">Users</div>
+<ng-container *ngIf="users.length > 0">
+  <div class="user-div container-fluid">
+    <div class="user mt-1 row" *ngFor="let user of users">
+      <div class="col-sm-10">{{ user.name }}</div>
+
+      <div
+        [ngClass]="{
+          'col-sm-2': true,
+          'status-active': user.status === 1,
+          'status-inactive': user.status === -1
+        }"
+      >
+        <i class="fa fa-circle status"></i>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="mt-4 mb-4">
+    <form [formGroup]="search">
+      <div class="form-group">
+        <input
+          type="text"
+          [(ngModel)]="name"
+          formControlName="name"
+          class="form-control "
+          (keyup)="keyup($event)"
+        />
+      </div>
+    </form>
+  </div> -->
+</ng-container>
