--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -6,6 +6,7 @@
       <div class="col-md-3">
         <div class="btn-group">
           <div
+            title="previous"
             class="btn btn-primary"
             mwlCalendarPreviousView
             [view]="view"
@@ -22,6 +23,7 @@
             Today
           </div>
           <div
+            title="next"
             class="btn btn-primary"
             mwlCalendarNextView
             [view]="view"
