--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
@@ -20,3 +20,10 @@ pre {
   box-shadow: 0 0 1px;
   border-radius: 2px;
 }
+.btn-primary {
+  background: #3f51b4 !important;
+  border-color: #3f51b4 !important;
+}
+.active {
+  background: royalblue !important;
+}
