signup & login fixes

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -4,19 +4,22 @@
               <mat-card>
                 <div class="text-center">Logo</div>
                 <div>
-                    <form>
+                    <form [formGroup]="loginForm" (submit)="onLogin()">
                         <div class="form-group">
                             <mat-form-field class="field">
-                                <input matInput type="text" placeholder="Email">
+                                <input matInput type="text" placeholder="Email" formControlName = "emailId">
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field class="field">
-                                <input matInput type="text" placeholder="Password">
+                                <input matInput type="text" placeholder="Password" formControlName="password">
                             </mat-form-field>
+                        </div>
+                        <div class="form-group">
+                            <mat-checkbox formControlName="remember">Remember Me</mat-checkbox>
                         </div>
                         <div class="">
-                            <button class="" mat-raised-button color="primary" type="button">Login</button>
+                            <button mat-raised-button color="primary" type="submit">Login</button>
                             <mat-label class="pl-3"><a href="#">Forget Password ?</a></mat-label>  
                         </div>
                     </form>
